syntax = "proto3";

option csharp_namespace = "new_timesheet_manager_server";

package greet;

import "buf/validate/validate.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Validate (HelloRequest) returns (ValidationErrors);
}

message ValidationError {
    string path = 1;
    string error = 2;
}

message ValidationErrors {
  repeated ValidationError errors = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 999];
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
